syntax = "proto3";

package Sucrose.Grpc.Common.Proto.Launcher;
option csharp_namespace = "Sucrose.Grpc.Common";

import "google/protobuf/empty.proto";

service Launcher {
    rpc ReleaseLauncher (google.protobuf.Empty) returns (LauncherReleaseResponse);
    rpc StateLauncher (google.protobuf.Empty) returns (LauncherStateResponse);
    rpc ShowLauncher (google.protobuf.Empty) returns (LauncherShowResponse);
    rpc HideLauncher (google.protobuf.Empty) returns (LauncherHideResponse);
}

message LauncherReleaseResponse {
    bool state = 1;
}

message LauncherStateResponse {
    bool state = 1;
}

message LauncherShowResponse {
    bool result = 1;
}

message LauncherHideResponse {
    bool result = 1;
}